--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-
+style
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Slab:wght@100..900&display=swap');
 p, label, option,:placeholder-shown{
     font-family: "Inter", sans-serif;
